# fastswan

./: .gitignore  Makefile  README.md  meson.build
.github/: FUNDING.yml
.github/workflows/: actions-compile.yml  build-deb.yml  codeql.yml
conf/: fastswan.conf
debian/: changelog  control  fastswan.service
doc/: mkdocs.yml
doc/docs/: index.md
doc/docs/Getting-Started/: 01-installation.md  index.md
doc/docs/IPsecGW-Sample/: Connected-Network.md  Routed-Network.md  index.md
doc/docs/Nvidia-Bluefield-3-Benchmark/: index.md
doc/docs/Nvidia-ConnectX-7-Benchmark/: index.md
doc/docs/Reference-Manual/: 01-global-config.md  02-bpf-program.md  03-interface.md  04-show-commands.md  05-monitor-debug.md  index.md
doc/docs/stylesheets/: extra.css
lib/: Makefile  bitops.h  command.c  command.h  config.h  config.h.in  container.h  cpu.c  cpu.h  daemon.c  daemon.h  disk.c  disk.h  ethtool.c  ethtool.h  gauge.c  gauge.h  id_pool.c  id_pool.h  inet_server.c  inet_server.h  inet_utils.c  inet_utils.h  ip_pool.c  ip_pool.h  json_reader.c  json_reader.h  json_writer.c  json_writer.h  lease_pool.c  lease_pool.h  list_head.c  list_head.h  logger.c  logger.h  memory.c  memory.h  mempool.c  mempool.h  meson.build  (+31 more)
src/: Makefile  fswan_bpf.c  fswan_bpf_prog.c  fswan_bpf_prog_vty.c  fswan_bpf_vty.c  fswan_bpf_xfrm.c  fswan_cpu.c  fswan_cpu_vty.c  fswan_data.c  fswan_flower.c  fswan_hairpin.c  fswan_if.c  fswan_if_ethtool.c  fswan_if_rxq.c  fswan_if_vty.c  fswan_monitor.c  fswan_monitor_vty.c  fswan_netlink.c  fswan_netlink_flower.c  fswan_netlink_xfrm.c  fswan_vty.c  fswan_vty_shell.c  fswan_xfrm_vty.c  main.c  meson.build
src/bpf/: Makefile  meson.build  xfrm.h  xfrm_offload.c
src/include/: fastswan.h  fswan_bpf.h  fswan_bpf_prog.h  fswan_bpf_vty.h  fswan_bpf_xfrm.h  fswan_compat.h  fswan_cpu.h  fswan_cpu_vty.h  fswan_data.h  fswan_flower.h  fswan_hairpin.h  fswan_if.h  fswan_if_ethtool.h  fswan_if_rxq.h  fswan_if_vty.h  fswan_monitor.h  fswan_netlink.h  fswan_netlink_flower.h  fswan_vty.h  fswan_vty_shell.h  main.h
subprojects/: libbpf.wrap
subprojects/packagefiles/libbpf/: get_version.sh  meson.build
tools/: setup-devlink.sh  setup-host.sh  setup-mlx.sh
tools/benchmark/: fastswan-bench.conf  readme.txt
tools/benchmark/4rx-4tx/: setup.sh
tools/benchmark/4rx-4tx/profiles/: MNO-mixed-symmetric.py  MNO-traffic-pattern.py  ipsec-cx7.py
tools/benchmark/4rx-4tx/scripts/: gen-swanctl-s0-1.sh  gen-swanctl-s0.sh  gen-swanctl-s1-1.sh  gen-swanctl-s1.sh  ipsecgw0.sh  ipsecgw1.sh  neig.sh
