# SPDX-License-Identifier: AGPL-3.0-or-later

lib_src = files(
  'buffer.c',
  'command.c',
  'daemon.c',
  'json_reader.c',
  'json_writer.c',
  'list_head.c',
  'logger.c',
  'md5.c',
  'memory.c',
  'pidfile.c',
  'pkt_buffer.c',
  'prefix.c',
  'process.c',
  'rbtree.c',
  'rt_table.c',
  'scheduler.c',
  'signals.c',
  'timer.c',
  'utils.c',
  'vector.c',
  'vty.c',
)
src += lib_src

inc += include_directories('.')
