# SPDX-License-Identifier: AGPL-3.0-or-later 

lib_src = files(
  'addr.c',
  'cpu.c',
  'ethtool.c',
  'gauge.c',
  'buffer.c',
  'command.c',
  'daemon.c',
  'disk.c',
  'inet_server.c',
  'inet_utils.c',
  'json_reader.c',
  'json_writer.c',
  'list_head.c',
  'logger.c',
  'md5.c',
  'memory.c',
  'mempool.c',
  'pci.c',
  'pidfile.c',
  'pkt_buffer.c',
  'prefix.c',
  'process.c',
  'rbtree.c',
  'rt_table.c',
  'signals.c',
  'timer.c',
  'thread.c',
  'utils.c',
  'vector.c',
  'vty.c',
  'vty_gauge.c',
  'vty_graph.c',
  'vty_matrix.c',
  'table.c',
)
src += lib_src

inc += include_directories('.')
